test/TestPhases/typechecker/invalid/ParameterInit.blc
module


activity main ()()
    var x: int64
    param p = x + 7
    x = prev p
    await false
end
